<resources>
    <string name="app_name">Rentvilla</string>
    <string name="rentvillalogo1">RentVillaLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="powered_by_shreylabs">Powered by ShreyLabs</string>
    <string name="sign_in">Signin</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_drawerhome">drawerhome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
